objects/Knowledge__kav.object
<CustomObject>
    <articleTypeChannelDisplay>
        <articleTypeTemplates>
            <channel>App</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Prm</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Csp</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Pkb</channel>
            <template>Toc</template>
        </articleTypeTemplates>
    </articleTypeChannelDisplay>
    <fields>
        <fullName>WT_Answer__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Answer</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>WT_Approval_Status__c</fullName>
        <description>Approval Status</description>
        <label>Approval Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                    <default>true</default>
                    <label>Pending</label>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Recalled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WT_Approval_Submitted_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Approval Submitted Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>WT_Approved_Date__c</fullName>
        <description>Approved Date Time</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Approved Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>WT_Compliance_Rejected_Count__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Compliance Rejected Count</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WT_Date_Unpublished__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Unpublished</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>WT_Disclaimer__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Disclaimer</label>
        <length>130000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>WT_Knowledge_Category__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Knowledge Category</label>
        <referenceTo>WT_Knowledge_Category__c</referenceTo>
        <relationshipLabel>Knowledge</relationshipLabel>
        <relationshipName>Knowledge</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>WT_Originator__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Originator</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_Priority__c</fullName>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1 - Highest</fullName>
                </value>
                <value>
                    <fullName>2 - High</fullName>
                </value>
                <value>
                    <fullName>3 - Medium</fullName>
                </value>
                <value>
                    <fullName>4 - Low</fullName>
                </value>
                <value>
                    <fullName>5 - Lowest</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WT_Publication_Comment__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Publication Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>WT_Publish_Without_Compliance_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Publish Without Compliance Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WT_Question__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Question</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <label>Knowledge</label>
    <listViews>
        <fullName>archived_articles</fullName>
        <columns>TITLE</columns>
        <columns>ABSTRACT</columns>
        <columns>ARTICLE_NUMBER</columns>
        <columns>LANGUAGE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PUBLISH_STATUS</field>
            <operation>equals</operation>
            <value>3</value>
        </filters>
        <filters>
            <field>LANGUAGE</field>
            <operation>equals</operation>
            <value>en_US</value>
        </filters>
        <label>Archived Articles</label>
    </listViews>
    <listViews>
        <fullName>draft_articles</fullName>
        <columns>TITLE</columns>
        <columns>ABSTRACT</columns>
        <columns>ARTICLE_NUMBER</columns>
        <columns>LANGUAGE</columns>
        <columns>WT_Knowledge_Category__c</columns>
        <columns>IS_CHANNEL_PKB</columns>
        <columns>SYSTEM_MODSTAMP</columns>
        <columns>WT_Approval_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PUBLISH_STATUS</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>LANGUAGE</field>
            <operation>equals</operation>
            <value>en_US</value>
        </filters>
        <label>Draft Articles</label>
    </listViews>
    <listViews>
        <fullName>published_articles</fullName>
        <columns>TITLE</columns>
        <columns>ABSTRACT</columns>
        <columns>ARTICLE_NUMBER</columns>
        <columns>LANGUAGE</columns>
        <columns>FIRST_PUBLISHED_DATE</columns>
        <columns>WT_Knowledge_Category__c</columns>
        <columns>LAST_PUBLISHED_DATE</columns>
        <columns>URL_NAME</columns>
        <columns>PUBLISH_STATUS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PUBLISH_STATUS</field>
            <operation>equals</operation>
            <value>2</value>
        </filters>
        <filters>
            <field>LANGUAGE</field>
            <operation>equals</operation>
            <value>en_US</value>
        </filters>
        <label>Published Articles</label>
    </listViews>
    <pluralLabel>Knowledge</pluralLabel>
    <recordTypes>
        <fullName>FAQ</fullName>
        <active>true</active>
        <description>This can be used for simple question and answer articles</description>
        <label>FAQ</label>
    </recordTypes>
</CustomObject>